curs 1 - exc live
de ramas sa rezolv cu bash

--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -9,10 +9,30 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
+
 </head>
 
 <body>
-
+  <picture>
+    <source
+      media="(max-width: 600px)"
+      srcset="images/w300.png"
+    >
+    <img
+      src="images/w1900.png"
+      alt="img"
+    >
+  </picture>
 
 
   <div
