--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
 
   <title>Media Queries</title>
 
@@ -18,6 +22,8 @@
 
 <body>
 
+  <h1>H1</h1>
+
   <div class="box box-1">
     <h1>01</h1>
   </div>
@@ -33,6 +39,8 @@
   <div class="box box-5">
     <h1>05</h1>
   </div>
+
+  <h3>H3</h3>
 
   <div
     class="pixeltab-host"
