--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -28,6 +28,16 @@
       media="(max-width: 600px)"
       srcset="images/w300.png"
     >
+    <source
+      media="(max-width: 768px)"
+      srcset="images/w500.png"
+    >
+
+    <source
+      media="(max-width: 992px)"
+      srcset="images/w900.png"
+    >
+
     <img
       src="images/w1900.png"
       alt="img"
