--- a/Curs01/Ex05/index.html
+++ b/Curs01/Ex05/index.html
@@ -10,6 +10,12 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
+
 </head>
 
 <body>
