C1 -  exc 6 - rest teme

--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -18,15 +18,17 @@
 
 <body>
 
-  <div class="square">
+  <div class="squares">
     <div class="square square-magenta"></div>
     <div class="square square-peru"></div>
     <div class="square square-purple"></div>
   </div>
 
 
-  <div>
-
+  <div class="circles">
+    <div class="circle circle-red circle-border-blue"></div>
+    <div class="circle circle-green"></div>
+    <div class="circle circle-blue"></div>
   </div>
 
 
