--- a/Curs01/Ex08/index.html
+++ b/Curs01/Ex08/index.html
@@ -8,16 +8,22 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 </head>
 
 <body>
 
-  <div>
-
+  <div class="squares">
+    <div class="square-magenta"></div>
+    <div class="square-peru"></div>
+    <div class="square-purple"></div>
   </div>
 
 
-  <div>
+  <div class="">
 
   </div>
 
