--- a/Curs01/Ex08/index.html
+++ b/Curs01/Ex08/index.html
@@ -23,8 +23,10 @@
   </div>
 
 
-  <div class="">
-
+  <div class="circles">
+    <div class="circle-red"></div>
+    <div class="circle-green"></div>
+    <div class="circle-blue"></div>
   </div>
 
 
