--- a/Curs02/Ex03/index.html
+++ b/Curs02/Ex03/index.html
@@ -25,10 +25,10 @@
 
 <body>
   <button class="btn-primary">Button1</button>
-  <button>Button2</button>
-  <button>Button3</button>
-  <button>Button4</button>
-  <button>Button5</button>
+  <button class="btn-secondary">Button2</button>
+  <button class="btn-inverted">Button3</button>
+  <button class="btn-inverted-light">Button4</button>
+  <button class="btn-tertiary">Button5</button>
   <button class="btn-inverted btn-text-gray">Button6</button>
 
   <div
