--- a/Curs05/Ex01/index.html
+++ b/Curs05/Ex01/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
   <title>Bootstrap Grid</title>
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
+    crossorigin="anonymous"
+  >
 </head>
+
 <body>
-  
+
+  <div class="container">
+    <div
+      class="row bg-secondary align-items-start my-3"
+      style="height: 250px;"
+    >
+      <div class="col border border-primary p-3">o coloana din 3</div>
+      <div class="col border border-primary p-3">o coloana din 3</div>
+      <div class="col border border-primary p-3">o coloana din 3</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div
+      class="row bg-secondary align-items-center my-3"
+      style="height: 250px;"
+    >
+      <div class="col border border-danger p-3">o coloana din 3</div>
+      <div class="col border border-danger p-3">o coloana din 3</div>
+      <div class="col border border-danger p-3">o coloana din 3</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div
+      class="row bg-secondary align-items-end my-3"
+      style="height: 250px;"
+    >
+      <div class="col border border-white p-3">o coloana din 3</div>
+      <div class="col border border-white p-3">o coloana din 3</div>
+      <div class="col border border-white p-3">o coloana din 3</div>
+    </div>
+  </div>
+
+
+
 </body>
+
 </html>
