--- a/Curs05/Ex03/index.html
+++ b/Curs05/Ex03/index.html
@@ -17,20 +17,27 @@
     rel="stylesheet"
     href="./css/style.css"
   >
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
+    crossorigin="anonymous"
+  >
 </head>
 
 <body>
 
   <div class="container">
     <div class="row">
-      <div class="col">Last</div>
+      <div class="col order-last">Last</div>
       <div class="col">Second</div>
-      <div class="col">First</div>
+      <div class="col order-first">First</div>
     </div>
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row flex-row-reverse">
       <div class="col">5</div>
       <div class="col">4</div>
       <div class="col">3</div>
@@ -40,7 +47,7 @@
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row flex-row-reverse">
       <div class="col">10</div>
       <div class="col">20</div>
       <div class="col">30</div>
