--- a/Curs05/Ex11/index.html
+++ b/Curs05/Ex11/index.html
@@ -54,6 +54,31 @@
     </div>
   </div>
 
+  <div class="container border border-danger">
+
+    <div
+      class="row justify-content-center"
+      style="height: 50px;"
+    >
+      <div class="col-4 bg-dark my-2"></div>
+    </div>
+
+    <div
+      class="row justify-content-center"
+      style="height: 50px;"
+    >
+      <div class="col-4 bg-info my-2"></div>
+    </div>
+
+    <div
+      class="row justify-content-end"
+      style="height: 50px;"
+    >
+      <div class="col-4 bg-dark my-2"></div>
+    </div>
+  </div>
+
+
   <div class="container my-4">
     <h3 class="text-warning">Aliniate folosind offset</h3>
   </div>
@@ -61,25 +86,56 @@
   <div class="container border border-primary">
     <div
       class="row my-1"
-      style="height: 105px"
+      style="height: 50px"
     >
       <div class="col-4 offset-4 bg-dark"></div>
     </div>
 
     <div
       class="row my-1"
-      style="height: 105px"
+      style="height: 50px"
     >
       <div class="col-4 offset-4 bg-danger"></div>
     </div>
 
     <div
       class="row my-1"
-      style="height: 105px"
+      style="height: 50px"
     >
       <div class="col-4 offset-8 bg-warning"></div>
     </div>
   </div>
+
+  <div class="container border border-info">
+    <div
+      class="row my-1"
+      style="height: 35px;"
+    >
+      <div class="col-4 bg-success">
+      </div>
+      <div class="col-4 bg-success offset-4">
+      </div>
+    </div>
+
+    <div
+      class="row my-1"
+      style="height: 35px;"
+    >
+      <div class="col-4 bg-success offset-4">
+      </div>
+    </div>
+
+    <div
+      class="row my-1"
+      style="height: 35px;"
+    >
+      <div class="col-4 bg-success">
+      </div>
+      <div class="col-4 bg-success offset-4">
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
