--- a/Curs05/Ex06/index.html
+++ b/Curs05/Ex06/index.html
@@ -25,10 +25,10 @@
 </head>
 
 <body>
-  <div class="box">1</div>
+  <div class="box ms-4 mt-2 p-4 ms-md-0 mt-md-0 p-md-0">1</div>
   <div class="box my-2 ms-md-4 p-md-4">2</div>
   <div class="box ms-4 my-2 py-2 ms-md-0 mt-md-0 p-md-0">3</div>
-  <div class="box">4</div>
+  <div class="box mt-4 ms-md-4 p-md-4">4</div>
 
   <div
     class="pixeltab-host"
