--- a/Curs05/Ex10/index.html
+++ b/Curs05/Ex10/index.html
@@ -17,9 +17,20 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
+    crossorigin="anonymous"
+  >
 </head>
 
 <body>
+  <div class="alert alert-danger">Lorem ipsum dolor sit amet</div>
+  <div class="alert alert-warning">Lorem ipsum dolor sit amet</div>
+  <div class="alert alert-success">Lorem ipsum dolor sit amet</div>
+  <div class="alert alert-dark">Lorem ipsum dolor sit amet</div>
 
   <div
     class="pixeltab-host"
