curs live proiect - eroare solved

--- a/thread_affair/src/index.html
+++ b/thread_affair/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
-  >
+  />
   <title>Welcome to the Pixellab Builder</title>
 
   <link
@@ -28,11 +28,10 @@
       <%= require('html-loader!./html/homepage/carousel.html')%>
     </header>
 
-
     <main class="content-main">
-      <%= require('html-loader!./html/homepage/social.html')%>
-      <%= require('html-loader!./html/homepage/store-locator.html')%>
-      <%= require('html-loader!./html/homepage/payment.html')%>
+      <%= require('html-loader!./html/homepage/social.html')%> <%=
+        require('html-loader!./html/homepage/store-locator.html')%> <%=
+        require('html-loader!./html/homepage/payment.html')%>
     </main>
   </main>
 
