--- a/thread_affair/src/html/homepage/payment.html
+++ b/thread_affair/src/html/homepage/payment.html
@@ -6,7 +6,7 @@
   <ul>
     <li>
       <img
-        src="./../../images/payment/cirus.jpg"
+        src="./../../images/payment/cirrus.jpg"
         alt="cirus"
       >
     </li>
