thread-aff css live 3

--- a/thread_affair/src/html/common/footer/footer-secondary.html
+++ b/thread_affair/src/html/common/footer/footer-secondary.html
@@ -1,4 +1,4 @@
-<div class="footer-secondary">
+<div class="footer-secondary container">
   <p>
     ©️2019 THREAD AFFAIR. All Rights Reserved.
   </p>
