--- a/thread_affair/src/html/footer.html
+++ b/thread_affair/src/html/footer.html
@@ -211,7 +211,7 @@
   <!-- ./footer-contact -->
 </div>
 
-<div class="footer-secondary">
+<div class="footer-secondary container">
   <p>
     ©2019 THREAD AFFAIR. All Rights Reserved.
   </p>
