--- a/thread_affair/src/html/header.html
+++ b/thread_affair/src/html/header.html
@@ -73,7 +73,7 @@
 </a>
 <!-- ./header-logo -->
 
-<nav class="nav-primary">
+<nav class="nav-primary d-none d-md-block">
   <ul>
     <li>
       <a
@@ -113,7 +113,7 @@
 </nav>
 <!-- ./nav-primary -->
 
-<nav class="nav-secondary">
+<nav class="nav-secondary d-none d-md-block">
   <ul>
     <li>
       <a
@@ -144,3 +144,4 @@
     </li>
   </ul>
 </nav>
+<!-- ./nav-secondary -->
