--- a/thread_affair/src/html/homepage/carousel.html
+++ b/thread_affair/src/html/homepage/carousel.html
@@ -1,15 +1,21 @@
-<div class="carousel">
+<div class="container">
   <h1>Custom Suits</h1>
   <h2>Get back to work in style</h2>
 
   <a
     href=""
     title="Create your suit"
+    class="button button-large"
   >Create your suit</a>
 
-  <p class="banner-copy">
-    A Tailored Suit that will fit you perfectly is a dream for everybody. <br>
-    We provide you with the design and you choose if you like it or if
-    you want to change the details with our online configurator.
+  <p class="banner-copy mx-auto">
+    <span class="d-block">
+      <span>A Tailored Suit</span>
+      that will fit you perfectly is a dream for everybody.
+    </span>
+    <span class="d-none">
+      We provide you with the design and you choose if you like it or if
+      you want to change the details with our online configurator.
+    </span>
   </p>
 </div>
