--- a/thread_affair/src/html/homepage/store-locator.html
+++ b/thread_affair/src/html/homepage/store-locator.html
@@ -1,4 +1,4 @@
-<section class="home-store-locator">
+<section class="home-store-locator container">
   <header>
     <h1>Our <span>Stores</span></h1>
   </header>
