--- a/thread_affair/src/html/homepage/payment.html
+++ b/thread_affair/src/html/homepage/payment.html
@@ -1,4 +1,4 @@
-<section class="home-payment">
+<section class="home-payment container">
   <header>
     <h1>How to <span>pay</span></h1>
   </header>
