--- a/thread_affair/src/html/homepage/social.html
+++ b/thread_affair/src/html/homepage/social.html
@@ -1,4 +1,4 @@
-<section class="home-social">
+<section class="home-social container">
   <header>
     <h1>We are <span>social</span>!</h1>
   </header>
