--- a/thread_affair/src/index.html
+++ b/thread_affair/src/index.html
@@ -8,7 +8,6 @@
     content="width=device-width, initial-scale=1.0"
   />
   <title>Thread Affair</title>
-
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -18,8 +17,8 @@
   />
 </head>
 
-<body>
-  <header class="header">
+<body class="homepage">
+  <header class="header container">
     <%= require('html-loader!./html/header.html')%>
   </header>
 
@@ -29,7 +28,7 @@
     </header>
 
     <main class="content-main">
-      <section class="catalog-preview">
+      <section class="catalog-preview container">
         <header>
           <h1>All time <span>bestsellers</span></h1>
 
@@ -56,7 +55,7 @@
       </section>
       <!-- ./catalog-preview -->
 
-      <section class="catalog-preview">
+      <section class="catalog-preview container">
         <header>
           <h1>All time <span>bestsellers</span></h1>
 
