thread aff live 4 - mobile done

--- a/thread_affair/src/html/homepage/catalog-preview-01.html
+++ b/thread_affair/src/html/homepage/catalog-preview-01.html
@@ -9,7 +9,7 @@
         alt="Thread Affair Traveller Suit"
       >
     </a>
-    <span class="product-tile-badge badge">
+    <span class="product-tile-badge badge badge--text-lg">
       %
     </span>
   </main>
