--- a/thread_affair/src/html/homepage/newsletter.html
+++ b/thread_affair/src/html/homepage/newsletter.html
@@ -1,6 +1,9 @@
 <section class="home-newsletter">
-  <form action="/">
-    <label for="">
+  <form
+    action="/"
+    class="container home-newsletter-container"
+  >
+    <label for="email">
       Subscribe to our
       <span>newsletter</span>
     </label>
@@ -9,6 +12,7 @@
       type="email"
       id="email"
       name="email"
+      placeholder="fade out"
     >
 
     <button type="submit">Subscribe</button>
