--- a/thread_affair/src/html/footer.html
+++ b/thread_affair/src/html/footer.html
@@ -1,214 +1,217 @@
-<div class="footer-main">
-  <nav class="footer-nav">
-    <ul>
-      <li>
-        <a
-          href=""
-          title="link"
-        >INFORMATION</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Contact us</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Track my order</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Shipping</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Free Returns*</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >My account</a>
-      </li>
-    </ul>
-
-    <ul>
-      <li>
-        <a
-          href=""
-          title="link"
-        >INFORMATION</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Contact us</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Track my order</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Shipping</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Free Returns*</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >My account</a>
-      </li>
-    </ul>
-
-    <ul>
-      <li>
-        <a
-          href=""
-          title="link"
-        >INFORMATION</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Contact us</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Track my order</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Shipping</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Free Returns*</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >My account</a>
-      </li>
-    </ul>
-
-    <ul>
-      <li>
-        <a
-          href=""
-          title="link"
-        >INFORMATION</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Contact us</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Track my order</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Shipping</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >Free Returns*</a>
-      </li>
-      <li>
-        <a
-          href=""
-          title="link"
-        >My account</a>
-      </li>
-    </ul>
-  </nav>
-  <!-- ./footer-nav -->
-
-  <div class="footer-contact">
-    <div class="footer-address">
-      <h3><span>Thread Affair</span> Milano</h3>
-
-      <p>
-        Largo Augusto 3, Milano, 20122, Milano, IT <br>
-        Tel: 0039 02 760 003 66 <br>
-        <a
-          href="mailto:office@thread-affair.com"
-          title="Email us"
-        >office@thread-affair.com</a>
-      </p>
-    </div>
-    <!-- ./footer-address -->
-
-    <nav class="footer-support">
+<div class="footer-main container">
+  <div class="container footer-main-container">
+    <nav class="footer-nav">
       <ul>
         <li>
           <a
             href=""
-            title="Support"
-          >
-            <i class="fas fa-phone"></i>
-            Support
-          </a>
+            title="link"
+          >INFORMATION</a>
         </li>
-
         <li>
           <a
             href=""
-            title="Chat"
-          >
-            <i class="fas fa-comments"></i>
-            Chat
-          </a>
+            title="link"
+          >Contact us</a>
         </li>
-
         <li>
           <a
             href=""
-            title="Email"
-          >
-            <i class="fas fa-envelope-open-text"></i>
+            title="link"
+          >Track my order</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Shipping</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Free Returns*</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >My account</a>
+        </li>
+      </ul>
 
-            Email
-          </a>
+      <ul>
+        <li>
+          <a
+            href=""
+            title="link"
+          >INFORMATION</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Contact us</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Track my order</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Shipping</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Free Returns*</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >My account</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a
+            href=""
+            title="link"
+          >INFORMATION</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Contact us</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Track my order</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Shipping</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Free Returns*</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >My account</a>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a
+            href=""
+            title="link"
+          >INFORMATION</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Contact us</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Track my order</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Shipping</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >Free Returns*</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="link"
+          >My account</a>
         </li>
       </ul>
     </nav>
+    <!-- ./footer-nav -->
+
+    <div class="footer-contact">
+      <div class="footer-address">
+        <h3><span>Thread Affair</span> Milano</h3>
+
+        <p>
+          Largo Augusto 3, Milano, 20122, Milano, IT <br>
+          Tel: 0039 02 760 003 66 <br>
+          <a
+            href="mailto:office@thread-affair.com"
+            title="Email us"
+          >office@thread-affair.com</a>
+        </p>
+      </div>
+      <!-- ./footer-address -->
+
+      <nav class="footer-support">
+        <ul>
+          <li>
+            <a
+              href=""
+              title="Support"
+            >
+              <i class="fas fa-phone"></i>
+              Support
+            </a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Chat"
+            >
+              <i class="fas fa-comments"></i>
+              Chat
+            </a>
+          </li>
+
+          <li>
+            <a
+              href=""
+              title="Email"
+            >
+              <i class="fas fa-envelope-open-text"></i>
+
+              Email
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- ./footer-contact -->
   </div>
-  <!-- ./footer-contact -->
+
 </div>
 
 <div class="footer-secondary container">
