--- a/thread_affair/src/html/homepage/catalog-preview-02.html
+++ b/thread_affair/src/html/homepage/catalog-preview-02.html
@@ -9,7 +9,7 @@
         alt="Thread Affair Traveller Suit"
       >
     </a>
-    <span class="product-tile-badge badge">
+    <span class="product-tile-badge badge badge--text-lg">
       %
     </span>
   </main>
@@ -69,7 +69,7 @@
         alt="Thread Affair Traveller Suit"
       >
     </a>
-    <span class="product-tile-badge badge">
+    <span class="product-tile-badge badge badge--text-lg">
       %
     </span>
   </main>
@@ -128,7 +128,7 @@
         alt="Thread Affair Traveller Suit"
       >
     </a>
-    <span class="product-tile-badge badge">
+    <span class="product-tile-badge badge badge--bg-secondary">
       signed
     </span>
   </main>
