MC - feedback 1 Dragos solved

--- a/monochrome/src/html/footer.html
+++ b/monochrome/src/html/footer.html
@@ -87,7 +87,7 @@
   </nav>
   <!-- ./footer-nav -->
 
-  <div class="footer-social">
+  <div class="footer-connect">
     <div class="footer-newsletter">
       <header class="d-md-none">
         <h1>Let's connect</h1>
@@ -115,8 +115,8 @@
     </div>
     <!-- ./footer-newsletter -->
 
-    <div class="footer-social-media">
-      <h1 class="footer-social-media-title d-md-none">We are highly likeable</h1>
+    <div class="footer-social">
+      <h1 class="footer-social-title d-md-none">We are highly likeable</h1>
       <ul>
         <li>
           <a
@@ -155,30 +155,31 @@
         </li>
       </ul>
     </div>
-    <!-- ./footer-social-media -->
-
+    <!-- ./footer-social -->
   </div>
+  <!-- ./footer-connect -->
+
+  <section class="footer-secondary d-md-none">
+    <ul>
+      <li>
+        <a
+          href=""
+          title=""
+        >
+          terms & conditions
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title=""
+        >
+          privacy & cookies
+        </a>
+      </li>
+    </ul>
+  </section>
+  <!-- ./footer-secondary -->
 </div>
 <!-- ./footer-main -->
-
-<div class="footer-secondary container d-md-none">
-  <ul>
-    <li>
-      <a
-        href=""
-        title=""
-      >
-        terms & conditions
-      </a>
-    </li>
-
-    <a
-      href=""
-      title=""
-    >
-      privacy & cookies
-    </a>
-    </li>
-  </ul>
-</div>
-<!-- ./footer-secondary -->
