--- a/monochrome/src/html/header.html
+++ b/monochrome/src/html/header.html
@@ -1,147 +1,149 @@
-<header class="header-brand-name d-md-none">
-  <a
-    href=""
-    title="Monochrome"
-  >
-    Monochrome
-  </a>
-</header>
+<div class="header-main container">
+  <header class="header-brand-name d-md-none">
+    <a
+      href=""
+      title="Monochrome"
+    >
+      Monochrome
+    </a>
+  </header>
 
-<div class="header-social d-none d-md-inline-block">
-  <ul>
-    <li>
-      <a
-        href=""
-        title="Youtube"
-      >
-        <i class="fab fa-youtube"></i>
-      </a>
-    </li>
+  <div class="header-social d-none d-md-inline-block">
+    <ul>
+      <li>
+        <a
+          href=""
+          title="Youtube"
+        >
+          <i class="fab fa-youtube"></i>
+        </a>
+      </li>
 
-    <li>
-      <a
-        href=""
-        title="Twitter"
-      >
-        <i class="fab fa-twitter"></i>
-      </a>
-    </li>
+      <li>
+        <a
+          href=""
+          title="Twitter"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+      </li>
 
-    <li>
-      <a
-        href=""
-        title="Facebook"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-    </li>
+      <li>
+        <a
+          href=""
+          title="Facebook"
+        >
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </li>
 
-    <li>
-      <a
-        href=""
-        title="Instagram"
-      >
-        <i class="fab fa-instagram-square"></i>
-      </a>
-    </li>
-  </ul>
+      <li>
+        <a
+          href=""
+          title="Instagram"
+        >
+          <i class="fab fa-instagram-square"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- ./header-social -->
+
+  <div class="header-contact d-none d-md-inline-block">
+    <a href="tel:+44(0)1023456789">
+      CALL US +44 (0)10 2345 6789
+    </a>
+  </div>
+  <!-- ./header-contact -->
+
+  <div class="header-controls">
+    <ul>
+      <li>
+        <a
+          href=""
+          title="My account"
+        >
+          <i class="far fa-user"></i>
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Whishlist"
+        >
+          <i class="far fa-heart"></i>
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Shopping cart"
+        >
+          <i class="fas fa-shopping-cart"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- ./header-controls -->
+
+  <nav class="nav-primary d-none d-md-block">
+    <ul>
+      <li>
+        <a
+          href=""
+          title="New arrivals"
+        >
+          New arrivals
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Brands"
+        >
+          Brands
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Men's"
+        >
+          Men's
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Women's"
+        >
+          Women's
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Accessories"
+        >
+          Accessories
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="Lookbook"
+        >
+          Lookbook
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <!-- nav-primary -->
 </div>
-<!-- ./header-social -->
-
-<div class="header-contact d-none d-md-inline-block">
-  <a href="tel:+44(0)1023456789">
-    CALL US +44 (0)10 2345 6789
-  </a>
-</div>
-<!-- ./header-contact -->
-
-<div class="header-controls">
-  <ul>
-    <li>
-      <a
-        href=""
-        title="My account"
-      >
-        <i class="far fa-user"></i>
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Whishlist"
-      >
-        <i class="far fa-heart"></i>
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Shopping cart"
-      >
-        <i class="fas fa-shopping-cart"></i>
-      </a>
-    </li>
-  </ul>
-</div>
-<!-- ./header-controls -->
-
-<nav class="nav-primary d-none d-md-block">
-  <ul>
-    <li>
-      <a
-        href=""
-        title="New arrivals"
-      >
-        New arrivals
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Brands"
-      >
-        Brands
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Men's"
-      >
-        Men's
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Women's"
-      >
-        Women's
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Accessories"
-      >
-        Accessories
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="Lookbook"
-      >
-        Lookbook
-      </a>
-    </li>
-  </ul>
-</nav>
-<!-- nav-primary -->
