thread-aff done

--- a/thread_affair/src/html/header.html
+++ b/thread_affair/src/html/header.html
@@ -1,65 +1,67 @@
-<div class="header-contact d-none">
-  <p>
-    <a
-      href="tel:+0708085252"
-      title=""
-    >
-      <i class="fas fa-phone"></i>
-      Toll-free +(899) 808 525
-    </a>
+<div class="d-md-flex justify-content-md-between align-items-md-center">
+  <div class="header-contact d-none d-md-block">
+    <p>
+      <a
+        href="tel:+0708085252"
+        title=""
+      >
+        <i class="fas fa-phone"></i>
+        Toll-free +(899) 808 525
+      </a>
 
-    |
+      |
 
-    <a
-      href="mailto:mail@mail.com"
-      title="emailus"
-    >mail@mail.com</a>
-  </p>
+      <a
+        href="mailto:mail@mail.com"
+        title="emailus"
+      >mail@mail.com</a>
+    </p>
+  </div>
+  <!-- ./header-contact -->
+
+  <div class="header-controls justify-content-md-end">
+    <ul class="d-md-none">
+      <li>
+        <a
+          href=""
+          title="Menu"
+        >
+          <i class="fas fa-bars"></i>
+        </a>
+      </li>
+
+      <li>
+        <a
+          href=""
+          title="search"
+        >
+          <i class="fas fa-search"></i>
+        </a>
+      </li>
+    </ul>
+
+    <ul class="d-flex flex-md-row-reverse">
+      <li>
+        <a
+          href=""
+          title="Cart"
+        >
+          <i class="fas fa-shopping-cart"></i>
+        </a>
+      </li>
+
+      <li class="me-md-4">
+        <a
+          href=""
+          title="User"
+        >
+          <i class="far fa-user"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- ./header-controls -->
 </div>
-<!-- ./header-contact -->
-
-<div class="header-controls">
-  <ul>
-    <li>
-      <a
-        href=""
-        title="Menu"
-      >
-        <i class="fas fa-bars"></i>
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="search"
-      >
-        <i class="fas fa-search"></i>
-      </a>
-    </li>
-  </ul>
-
-  <ul>
-    <li>
-      <a
-        href=""
-        title="Cart"
-      >
-        <i class="fas fa-shopping-cart"></i>
-      </a>
-    </li>
-
-    <li>
-      <a
-        href=""
-        title="User"
-      >
-        <i class="far fa-user"></i>
-      </a>
-    </li>
-  </ul>
-</div>
-<!-- ./header-controls -->
 
 <a
   href=""
