--- a/thread_affair/src/html/homepage/carousel.html
+++ b/thread_affair/src/html/homepage/carousel.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container banner-main-container">
   <h1>Custom Suits</h1>
   <h2>Get back to work in style</h2>
 
@@ -13,7 +13,7 @@
       <span>A Tailored Suit</span>
       that will fit you perfectly is a dream for everybody.
     </span>
-    <span class="d-none">
+    <span class="d-none d-md-block">
       We provide you with the design and you choose if you like it or if
       you want to change the details with our online configurator.
     </span>
