--- a/thread_affair/src/index.html
+++ b/thread_affair/src/index.html
@@ -57,7 +57,7 @@
 
       <section class="catalog-preview container">
         <header>
-          <h1>All time <span>bestsellers</span></h1>
+          <h1>New <span>collection</span></h1>
 
           <p>
             Accomplish new achievements with a bold new style
