--- a/thread_affair/src/html/footer.html
+++ b/thread_affair/src/html/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-main container">
+<div class="footer-main">
   <div class="container footer-main-container">
     <nav class="footer-nav">
       <ul>
