live thread-affair with patches

--- a/thread_affair/src/html/header.html
+++ b/thread_affair/src/html/header.html
@@ -2,19 +2,19 @@
   <div class="header-contact d-none d-md-block">
     <p>
       <a
-        href="tel:+0708085252"
-        title=""
+        href="tel:+07080756312"
+        title="Call us"
       >
         <i class="fas fa-phone"></i>
-        Toll-free +(899) 808 525
+        Toll free +(889) 123 3213
       </a>
 
       |
 
       <a
-        href="mailto:mail@mail.com"
+        href="mailto:mIl@mail.com"
         title="emailus"
-      >mail@mail.com</a>
+      >mai@mail.com</a>
     </p>
   </div>
   <!-- ./header-contact -->
@@ -33,7 +33,7 @@
       <li>
         <a
           href=""
-          title="search"
+          title=""
         >
           <i class="fas fa-search"></i>
         </a>
@@ -44,7 +44,7 @@
       <li>
         <a
           href=""
-          title="Cart"
+          title="Menu"
         >
           <i class="fas fa-shopping-cart"></i>
         </a>
@@ -53,7 +53,7 @@
       <li class="me-md-4">
         <a
           href=""
-          title="User"
+          title=""
         >
           <i class="far fa-user"></i>
         </a>
@@ -64,7 +64,7 @@
 </div>
 
 <a
-  href=""
+  href="/"
   class="header-logo"
   title="Home"
 >
@@ -115,20 +115,20 @@
 </nav>
 <!-- ./nav-primary -->
 
-<nav class="nav-secondary d-none d-md-block">
+<nav class="secondary d-none d-md-block">
   <ul>
     <li>
       <a
         href=""
-        title="Glamour suits"
-      >Glamour suits</a>
+        title="glamou suits"
+      >glamou suits</a>
     </li>
 
     <li>
       <a
         href=""
-        title="Wedding"
-      >Wedding</a>
+        title="Wedding suits"
+      >Wedding suits</a>
     </li>
 
     <li>
@@ -141,7 +141,7 @@
     <li>
       <a
         href=""
-        title="Customize your suit"
+        title="CUstomize your suit"
       >Customize your suit</a>
     </li>
   </ul>
