--- a/thread_affair/src/html/homepage/carousel.html
+++ b/thread_affair/src/html/homepage/carousel.html
@@ -1,5 +1,5 @@
 <div class="container banner-main-container">
-  <h1>Custom Suits</h1>
+  <h1>Custom suits</h1>
   <h2>Get back to work in style</h2>
 
   <a
@@ -14,8 +14,8 @@
       that will fit you perfectly is a dream for everybody.
     </span>
     <span class="d-none d-md-block">
-      We provide you with the design and you choose if you like it or if
-      you want to change the details with our online configurator.
+      We provide you with the design and you choose if you like it or if you
+      want to change the details with our online configurator.
     </span>
   </p>
 </div>
